--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,3 +70,12 @@ services:
       - ./microservice/listener:/app
     ports:
       - '8081:8080'
+  
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    volumes:
+      - ./client:/app
+    ports:
+      - '4200:4200'
