--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: zookeeper
     ports:
       - '2181:2181'
+    restart: on-failure
 
   kafka:
     image: wurstmeister/kafka:2.11-2.0.0
@@ -15,6 +16,7 @@ services:
       - KAFKA_ADVERTISED_PORT=9092
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_CREATE_TOPICS=onlineStream
+    restart: on-failure
 
   postgres:
     build: ./postgres
@@ -23,6 +25,7 @@ services:
       - POSTGRES_USER=nick
     ports:
       - '5432:5432'
+    restart: on-failure
   pgadmin:
     image: dpage/pgadmin4
     environment:
@@ -30,6 +33,7 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=admin
     ports:
       - '80:80'
+    restart: on-failure
 
   watcher:
     build:
@@ -50,6 +54,7 @@ services:
       - ./microservice/watcher:/app
     ports:
       - '8080:8080'
+    restart: on-failure
   
   listener:
     build:
@@ -70,6 +75,7 @@ services:
       - ./microservice/listener:/app
     ports:
       - '8081:8080'
+    restart: on-failure
   
   client:
     build:
@@ -79,3 +85,4 @@ services:
       - ./client:/app
     ports:
       - '4200:4200'
+    restart: on-failure
