task4: refactored worker service, improving exception handling, added liquibase

--- a/microservice/watcher/src/main/resources/application.yml
+++ b/microservice/watcher/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  liquibase:
+    change-log: classpath:/db/master-changelog.xml
 
   datasource:
     driver-class-name: org.postgresql.Driver
