dev: improved xml parser, added redirection strategy

--- a/microservice/watcher/src/main/resources/application-dev.yml
+++ b/microservice/watcher/src/main/resources/application-dev.yml
@@ -3,3 +3,7 @@ spring:
     url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
     username: ${PGUSER}
     password: ${PGPASSWORD}
+
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
