--- a/microservice/watcher/src/main/resources/application-prod.yml
+++ b/microservice/watcher/src/main/resources/application-prod.yml
@@ -3,3 +3,7 @@ spring:
     url: ${JDBC_DATABASE_URL}
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
+
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
