--- a/microservice/watcher/src/main/resources/application.properties
+++ b/microservice/watcher/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.kafka.producer.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+kafka.topic=${KAFKA_TOPIC}
+scheduler.cron.updater.rss=${RSS_CRON_UPDATER}
