task: saved fetched data to DB, modified init db script,  code refactoring

--- a/microservice/pom.xml
+++ b/microservice/pom.xml
@@ -20,8 +20,9 @@
     </parent>
 
     <modules>
-        <module>watcher</module>
+        <module>producer</module>
         <module>listener</module>
+        <module>writer</module>
     </modules>
 
     <properties>
