--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ services:
 
   zookeeper:
     image: zookeeper
+    container_name: zookeeper
     ports:
       - '2181:2181'
     # restart: on-failure
 
   kafka:
     image: wurstmeister/kafka:2.11-2.0.0
+    container_name: kafka
     links:
       - zookeeper
     environment:
@@ -20,11 +22,13 @@ services:
 
   redis:
     image: redis:alpine
+    container_name: redis
     ports:
       - '6379:6379'
     
   postgres:
     build: ./postgres
+    container_name: postgres
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=nick
@@ -33,6 +37,7 @@ services:
     restart: on-failure
   pgadmin:
     image: dpage/pgadmin4
+    container_name: pgadmin
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin
       - PGADMIN_DEFAULT_PASSWORD=admin
@@ -40,10 +45,11 @@ services:
       - '80:80'
     # restart: on-failure
 
-  watcher:
+  producer:
     build:
-      context: ./microservice/watcher
+      context: ./microservice/producer
       dockerfile: Dockerfile
+    container_name: producer
     links:
       - postgres
       - redis
@@ -61,13 +67,14 @@ services:
       - REDIS_PORT=6379
     volumes:
       - C:/Users/nryba/.m2/repository:/root/.m2/repository
-      - ./microservice/watcher:/app
+      - ./microservice/producer:/app
     # restart: on-failure
   
-  listener:
+  writer:
     build:
-      context: ./microservice/listener
+      context: ./microservice/writer
       dockerfile: Dockerfile
+    container_name: writer
     links:
       - postgres
       - kafka
@@ -75,7 +82,27 @@ services:
       - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - PGHOST=postgres
       - PGPORT=5432
-      - PGDATABASE=kafka
+      - PGDATABASE=rss_itemdb
+      - PGUSER=nick
+      - PGPASSWORD=password
+    volumes:
+      - C:/Users/nryba/.m2/repository:/root/.m2/repository
+      - ./microservice/writer:/app
+    # restart: on-failure
+
+  listener:
+    build:
+      context: ./microservice/listener
+      dockerfile: Dockerfile
+    container_name: listener
+    links:
+      - postgres
+      - kafka
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - PGHOST=postgres
+      - PGPORT=5432
+      - PGDATABASE=rss_itemdb
       - PGUSER=nick
       - PGPASSWORD=password
     volumes:
@@ -89,6 +116,7 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+    container_name: client
     volumes:
       - ./client:/app
     ports:
