task: added rss model and used it in app, code refactoring

--- a/microservice/listener/src/main/resources/application.properties
+++ b/microservice/listener/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.kafka.consumer.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.consumer.group-id=client
-spring.kafka.consumer.value-deserializer=com.corevalue.listener.deserializer.TestDeserializer
+spring.kafka.consumer.value-deserializer=com.corevalue.listener.deserializer.RSSItemDeserializer
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=MANUAL
