task: externalize kafka topic for writer and listener services

--- a/microservice/listener/src/main/resources/application.properties
+++ b/microservice/listener/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=MANUAL
 
+kafka.topic=${KAFKA_TOPIC}
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
