--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,7 @@ services:
       - kafka
     environment:
       - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_TOPIC=onlineStream
       - PGHOST=postgres
       - PGPORT=5432
       - PGDATABASE=rss_itemdb
@@ -100,6 +101,7 @@ services:
       - kafka
     environment:
       - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_TOPIC=onlineStream
       - PGHOST=postgres
       - PGPORT=5432
       - PGDATABASE=rss_itemdb
