--- a/microservice/pom.xml
+++ b/microservice/pom.xml
@@ -23,6 +23,7 @@
         <module>producer</module>
         <module>listener</module>
         <module>writer</module>
+        <module>spark-word-calculation</module>
     </modules>
 
     <properties>
