task: implementing spark

--- a/microservice/producer/src/main/resources/application.properties
+++ b/microservice/producer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.kafka.producer.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
@@ -8,3 +9,5 @@ spring.kafka.producer.properties.spring.json.add.type.headers=false
 
 kafka.topic=${KAFKA_TOPIC}
 scheduler.cron.updater.rss=${RSS_CRON_UPDATER}
+
+logging.level.root=WARN
