--- a/microservice/spark-word-calculation/src/main/resources/application.properties
+++ b/microservice/spark-word-calculation/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.kafka.consumer.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
@@ -12,3 +13,5 @@ spring.kafka.listener.ack-mode=MANUAL
 
 kafka.topic=${KAFKA_TOPIC}
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+logging.level.root=WARN
