task: implementing spark

--- a/microservice/listener/src/main/resources/application.properties
+++ b/microservice/listener/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.kafka.listener.ack-mode=MANUAL
 kafka.topic=${KAFKA_TOPIC}
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-logging.level.root=WARN
+logging.level.root=OFF
