--- a/microservice/producer/src/main/resources/application.properties
+++ b/microservice/producer/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.kafka.producer.properties.spring.json.add.type.headers=false
 kafka.topic=${KAFKA_TOPIC}
 scheduler.cron.updater.rss=${RSS_CRON_UPDATER}
 
-logging.level.root=WARN
+logging.level.root=OFF
