--- a/microservice/writer/src/main/resources/application.properties
+++ b/microservice/writer/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.kafka.listener.ack-mode=MANUAL
 kafka.topic=${KAFKA_TOPIC}
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-logging.level.root=WARN
-logging.level.org.hibernate=ERROR
+logging.level.root=OFF
+logging.level.org.hibernate=OFF
