Implemented Spark Stream, in progress

--- a/microservice/spark-word-calculation/Dockerfile
+++ b/microservice/spark-word-calculation/Dockerfile
@@ -2,5 +2,4 @@ FROM maven:alpine
 WORKDIR /app
 COPY ./ ./
 EXPOSE 8080
-CMD mvn spring-boot:run -Djvm.options=-Xmx512m
-# CMD mvn spring-boot:run  -Xms3G -Xmx3G
+CMD mvn spring-boot:run -Djvm.options="-Xms1G -Xmx1G"
