spark: implemented Spark Structured Stream API (on Dataset), added simple pipeline kafka->spark->kafka

--- a/microservice/listener/src/main/resources/application.properties
+++ b/microservice/listener/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.kafka.consumer.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.consumer.group-id=client
 spring.kafka.consumer.value-deserializer=com.corevalue.listener.deserializer.RSSItemDeserializer
+#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=MANUAL
@@ -13,4 +14,4 @@ spring.kafka.listener.ack-mode=MANUAL
 kafka.topic=${KAFKA_TOPIC}
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-logging.level.root=OFF
+logging.level.root=WARN
