--- a/microservice/spark-word-calculation/src/main/resources/application.properties
+++ b/microservice/spark-word-calculation/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=MANUAL
 
-kafka.topic=${KAFKA_TOPIC}
+kafka.input.topic=${KAFKA_INPUT_TOPIC}
+kafka.output.topic=${KAFKA_OUTPUT_TOPIC}
 
 logging.level.root=WARN
