--- a/microservice/writer/Dockerfile
+++ b/microservice/writer/Dockerfile
@@ -1,5 +1,7 @@
 FROM maven:alpine
 WORKDIR /app
 COPY ./ ./
+RUN cd ./parent && mvn install
+RUN mvn clean install
 EXPOSE 8080
 CMD mvn spring-boot:run -Dspring.profiles.active=dev
