--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,11 @@
-FROM node:alpine
-WORKDIR '/app'
+FROM node:alpine as builder
+WORKDIR /app
 RUN apk add yarn
 COPY ./ ./
+RUN yarn install
+RUN yarn build
+
+FROM nginx
 EXPOSE 4200
-CMD yarn start
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/dist /usr/share/nginx/html
