--- a/microservice/listener/src/main/resources/application.properties
+++ b/microservice/listener/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.generate_statistics=false
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-
 spring.kafka.consumer.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.consumer.group-id=client
-spring.kafka.consumer.value-deserializer=com.corevalue.listener.deserializer.RSSItemDeserializer
-#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=com.corevalue.listener.deserializer.DomainCounterDeserializer
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=MANUAL
