--- a/microservice/spark/Dockerfile
+++ b/microservice/spark/Dockerfile
@@ -4,4 +4,4 @@ COPY ./ ./
 RUN cd ./parent && mvn install
 RUN mvn clean install
 EXPOSE 8080
-CMD mvn spring-boot:run
+CMD mvn spring-boot:run -Djvm.options="-Xms1G -Xmx1G"
