--- a/microservice/spark/pom.xml
+++ b/microservice/spark/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>spark</name>
-    <description>Microservice for Spark (word calculation)</description>
+    <description>Microservice for Spark (online computation)</description>
 
     <parent>
         <groupId>com.corevalue</groupId>
@@ -24,24 +24,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
         <dependency>
             <groupId>org.apache.spark</groupId>
